# compIAM

./: .buildinfo  .gitignore  .readthedocs.yaml  ACKNOWLEDGEMENTS  AUTHORS  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  optional_requirements.txt  prova.csv  py-modindex.html  pyproject.toml  requirements.txt  scratch.py  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: basic_usage.doctree  contributing.doctree  datasets.doctree  melody.doctree  rhythm.doctree  separation.doctree  structure.doctree  timbre.doctree  utils.doctree  visualisation.doctree
.github/: environment-ci.yml
.github/workflows/: ci.yml  documentation.yaml  tests.yml
_modules/: compiam.html  index.html
_modules/compiam/: dunya.html
_sources/: index.rst.txt
_sources/source/: basic_usage.rst.txt  melody.rst.txt  separation.rst.txt  structure.rst.txt  timbre.rst.txt  visualisation.rst.txt
_static/: style.css
compiam/: __init__.py  data.py  exceptions.py  io.py  version.py
compiam/annotations/: 12_Sharanu_Janakana.txt  143_Sundari_Nee_Divya.txt  188_Vanajaksha_Ninne_Kori.txt  47_Koti_Janmani.txt  README.md
compiam/datasets/: __init__.py
compiam/dunya/: README.md  __init__.py  conn.py  writing_utils.py
compiam/melody/: README.md  __init__.py  ftanet.py  ftanet_carnatic.py  melodia.py  tonic_multipitch.py
compiam/model_store/: data.py  wrappers.py
compiam/models/: README.md
compiam/rhythm/: README.md  __init__.py  tabla_begin.py
compiam/separation/: README.md  __init__.py
compiam/structure/: README.md  __init__.py
compiam/timbre/: README.md  __init__.py  mridangam_stroke.py
compiam/utils/: __init__.py  augment.py  core.py  datasets.py  download.py  pitch.py
compiam/visualisation/: __init__.py  audio.py  pitch.py  training.py
conf/: svara_lookup.yaml
conf/raga/: carnatic.yaml
docs/: conf.py  index.rst  requirements.txt
docs/source/: basic_usage.rst  contributing.rst  datasets.rst  melody.rst  rhythm.rst  separation.rst  structure.rst  timbre.rst  utils.rst  visualisation.rst
notebooks/: 0_Tabla_Stroke_Classification.ipynb
notebooks/Rhythm/: 01_Transcription.ipynb  tabla_solo_dataset_paths.py
notebooks/melody/: Carnatic Pattern Search.ipynb  pattern_search.py
notebooks/rhythm/: 0_Tabla_Stroke_Classification.ipynb  Transcription.ipynb
source/: basic_usage.html  contributing.html  datasets.html  melody.html  rhythm.html  separation.html  structure.html  timbre.html  utils.html  visualisation.html
tests/: basic_test.py  conftest.py  test_tensorflow.py  test_wrappers.py
tests/melody/: test_deepsrgm.py  test_essentia_extractors.py  test_ftanet.py  test_ftaresnet.py
tests/optional_deps/: test_torch.py
tests/rhythm/: test_4way_tabla.py  test_akshara_pulse.py
(+251 files in other folders)
