[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compiam"
dynamic = ["version"]
description = "Common tools for the computational analysis of Indian Art Music."
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.9"
keywords = ["carnatic", "hindustani", "models", "datasets", "tools"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "attrs>=23.1.0",
    "matplotlib>=3.0.0",
    "numpy>=1.20.3,<=1.26.4",
    "joblib>=1.2.0",
    "pathlib~=1.0.1",
    "tqdm>=4.66.1",
    "IPython>=7.34.0",
    "ipywidgets>=7.0.0,<8",
    "Jinja2~=3.1.2",
    "configobj~=5.0.6",
    "seaborn",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "scikit-learn~=1.5.2",
    "scikit-image~=0.24.0",
    "opencv-python~=4.6.0",
    "hmmlearn==0.3.3",
    "fastdtw~=0.3.4",
    "compmusic==0.4",
    "mirdata==0.3.9",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.optional-dependencies]
tests = [
    "decorator>=5.1.1",
    "pytest>=7.2.0",
    "future>=0.18.3",
    "black>=23.3.0",
]
docs = [
    "numpydoc",
    "recommonmark",
    "sphinx>=3.4.0",
    "sphinxcontrib-napoleon",
    "sphinx_rtd_theme",
    "sphinx-togglebutton",
]
tensorflow = [
    "keras<3.0.0",
    "tensorflow>=2.12.0,<2.16",
]
torch = [
    "torch==1.13.0",
    "torchaudio",
]
essentia = [
    "essentia",
]

[project.urls]
Homepage = "https://github.com/MTG/compIAM"
Documentation = "https://mtg.github.io/compIAM/"
Issues = "https://github.com/MTG/compIAM/issues/"
Releases = "https://github.com/MTG/compIAM/releases/"